--- a/art_studio.html
+++ b/art_studio.html
@@ -91,11 +91,11 @@ To convey this sentiment, I take moments from life and try to capture their esse
           </td>
         </tr>
         <tr><td><img class="imgl" src="images/Discombobulated.JPG" alt="" style="width:350px; height:auto;"></td>
-          <td><h8>Fear and Risk</h8>
+          <td><h8>Discombobulated</h8>
                 <p><b>Year</b>: 2024<br>
                     <b>Medium</b>: Acrylic, Yarn, Gel Pen, Micro-Pen, Illustration Board <br>
                     <b>Dimension</b>: 16'' x 20''</p>
-                <p><b>Description</b>:<br>Life at times can feel uncontrollable. This piece shows a woman’s head and facial features being taken apart. There is a blur of gray and blue everywhere which captures the essence of the mental drainage. The piece represents my mental state and feelings as I have experienced Graves’ disease as a part of my life. <br>
+                <p><b>Description</b>:<br>Life at times can feel uncontrollable. This piece shows a woman's head and facial features being taken apart. There is a blur of gray and blue everywhere which captures the essence of the mental drainage. The piece represents my mental state and feelings as I have experienced Graves' disease as a part of my life. <br>
                 Before I started painting, I researched colors that symbolize sadness and how artists express emotions. I tried to show that even though the woman looks calm on the outside, on the inside she is harboring complicated feelings. Her emotions are stuck inside a tree above her head, always growing. I use strings of yarn and hot glue to reveal the knotty growth of the tree of emotions. I created the formation of the eye with a marker, to show the fragility of emotions. I hope to send comfort and a sense of belonging to individuals who are dealing with the same emotions. 
                 </p>
           </td>
@@ -105,7 +105,7 @@ To convey this sentiment, I take moments from life and try to capture their esse
                 <p><b>Year</b>: 2024<br>
                     <b>Medium</b>: Acrylic Paint, Embroidery String, Illustration Board <br>
                     <b>Dimension</b>: 16'' x 20''</p>
-                <p><b>Description</b>:<br>In the midst of summer heat, an ocean turtle swims by slowly in the air with a thriving forest on its back. Though old and weary of the heat, the turtle keeps on swimming. The turtle, a symbol of the desert cities, reveals the endless strength and the never ending growth of these cities. The turtle’s resilience is what I admire the most, as I aspire to become as strong, physically and mentally.<br>
+                <p><b>Description</b>:<br>In the midst of summer heat, an ocean turtle swims by slowly in the air with a thriving forest on its back. Though old and weary of the heat, the turtle keeps on swimming. The turtle, a symbol of the desert cities, reveals the endless strength and the never ending growth of these cities. The turtle's resilience is what I admire the most, as I aspire to become as strong, physically and mentally.<br>
                 I conceptualized the idea, drafted a design, and decided to use the medium of acrylic paint, as it is the longest-lasting painting material, to express the trait of resilience. I embroidered in the mushroom forest, painted in the background, and decided where the components would be by using embroidery string. I used acrylic paint to paint in the mushrooms and only knotted them in the middle. This painting allowed me to reflect upon how much the resilient community of the desert city of LA means to me.
                 </p>
           </td>
@@ -115,7 +115,7 @@ To convey this sentiment, I take moments from life and try to capture their esse
                 <p><b>Year</b>: 2023<br>
                     <b>Medium</b>: Oil Pastel on Paper <br>
                     <b>Dimension</b>: 12'' x 18''</p>
-                <p><b>Description</b>:<br>After I grew to accept my Graves’ disease as part of my life, I gradually began experiencing more still, relaxed emotions. <br>
+                <p><b>Description</b>:<br>After I grew to accept my Graves' disease as part of my life, I gradually began experiencing more still, relaxed emotions. <br>
                 Using layers of oil pastel, I created a reflection on the water that symbolizes looking back at myself and who I was in the past. I blended the colors to tie multiple emotions to create a visual symphony. Although the piece is dark, the bright hues of the light reveal the darkness to fade away. The masts of the ship standing tall represent the inner strength I developed despite my turbulent emotions.
                 </p>
           </td>
@@ -130,7 +130,7 @@ To convey this sentiment, I take moments from life and try to capture their esse
                 </p>
           </td>
         </tr>
-        <tr><td><img class="imgl" src="images/Prosperity_and_Luck.JPG" alt="" style="width:350px; height:auto;"></td>
+        <tr><td><img class="imgl" src="images/Prosperity_and_Luck.jpg" alt="" style="width:350px; height:auto;"></td>
           <td><h8>Prosperity and Luck</h8>
                 <p><b>Year</b>: 2024<br>
                     <b>Medium</b>: Oil Pastel on Paper <br>
@@ -158,7 +158,7 @@ To convey this sentiment, I take moments from life and try to capture their esse
                     <b>Medium</b>: Acrylic Paint, Pencils, Illustration Board <br>
                     <b>Dimension</b>: 9'' x 12''</p>
                 <p><b>Description</b>:<br>The world is full of endless possibilities, full of creation and potential for improvement. A young woman stares ahead confidently into the future. With her fiery yet welcoming personality, she dreams of expanding her world.<br>
-                My process includes painting with acrylic paint and creating different colors to make the woman’s future a brighter place where she can comfortably navigate. What she has experienced dots her world with color, and the bubbles of her hometown support her as she floats toward the future. I created the bubbles by painting circles with a blue color to symbolize the ocean and the woman’s hometown. By using the end of a paintbrush, I splatter paint onto the canvas, to reveal the individuals I have met in my life and the experiences that color my world. <br>
+                My process includes painting with acrylic paint and creating different colors to make the woman's future a brighter place where she can comfortably navigate. What she has experienced dots her world with color, and the bubbles of her hometown support her as she floats toward the future. I created the bubbles by painting circles with a blue color to symbolize the ocean and the woman's hometown. By using the end of a paintbrush, I splatter paint onto the canvas, to reveal the individuals I have met in my life and the experiences that color my world. <br>
                 Throughout this piece, I hope to create a sense in individuals that they should be confident about the future. 
                 </p>
           </td>
@@ -169,8 +169,8 @@ To convey this sentiment, I take moments from life and try to capture their esse
                     <b>Medium</b>: Rice, Acrylic, Hot glue, Micro-pen, Illustration Board<br>
                     <b>Dimension</b>: 9'' x 12''</p>
                 <p><b>Description</b>:<br>As part of my exploration in diverse cultures, I bring South Africa to your eyes through this painting. I spent time researching common South African dishes, the unique dish and color palette of a particular South African terrain.<br>
-                I painted South Africa’s Cape Malay Curry Chicken dish in the form of South Africa’s national flower. The flower just not only represents the dish but also represents the country as a whole. The green colors represent the beauty and nature of the country, and the rice symbolizes the population that makes up South Africa’s vibrant and colorful region. <br>
-                Through this piece, I hope to carry the essence of South Africa’s cuisine culture right to your eyes. In the future, I am curious to continue exploring diverse art techniques to further bring the country’s heritage and culture to life in paintings. 
+                I painted South Africa's Cape Malay Curry Chicken dish in the form of South Africa's national flower. The flower just not only represents the dish but also represents the country as a whole. The green colors represent the beauty and nature of the country, and the rice symbolizes the population that makes up South Africa's vibrant and colorful region. <br>
+                Through this piece, I hope to carry the essence of South Africa's cuisine culture right to your eyes. In the future, I am curious to continue exploring diverse art techniques to further bring the country's heritage and culture to life in paintings. 
                 </p>
           </td>
         </tr>
@@ -179,14 +179,14 @@ To convey this sentiment, I take moments from life and try to capture their esse
                 <p><b>Year</b>: 2023<br>
                     <b>Medium</b>: Pencil, Color Pencil, Micro-pen, Marker, Watercolor, Sketchbook Paper<br>
                     <b>Dimension</b>: 9'' x 11'' (Each)</p>
-                <p><b>Description</b>:<br>Admirer of nature, and practical objects, I enjoy drawing what I see outside or what’s in my house. Sometimes I like to place objects such as the M&Ms and the bird where they don’t belong to make them stand out, and to juxtapose the man-made with nature. <br>
+                <p><b>Description</b>:<br>Admirer of nature, and practical objects, I enjoy drawing what I see outside or what's in my house. Sometimes I like to place objects such as the M&Ms and the bird where they don't belong to make them stand out, and to juxtapose the man-made with nature. <br>
                 I splotch the paper with color to create a sense of timelessness. I keenly observe and pay close attention to detail. I perform my craft with love for every object and treat every crack in the wall or crinkle in the fabric or material as an individual. This challenged me to think artistically and critically about the layout, light, and shade. I use pencils, colored pencils, and markers to explore a new depth of value and expression. <br>
                 Through this sketch, I hope to reveal that simple objects such as a vase and the interior of the room are important landmarks in life. 
                 </p>
           </td>
         </tr>
       </table>
-      <hr><br><br><br>
+    
 
 <!--
         <div>
