--- a/website_and_mobile_app.html
+++ b/website_and_mobile_app.html
@@ -41,11 +41,11 @@ $(function () {
                 <img class="imgl" src="images/metaliusa.png" alt="" style="width:auto;height:380px;">
                 <h4>METALI LLC</h4>
                 <p>Metali LLC is pioneer in Nanotech Metallurgy Technolgy. The company locates in Los Angeles and is leading a new metals revoulution in the 21st century. 
-                This past summer, I worked with the company organizier to re-designed the layouts, typography, payment form and created mmarket materials. The website was created and developed with Wordpress.  </p>
+                This past summer, I worked with the company organizier to re-designed the layouts, typography, payment form and created market materials. The website was created and developed with Wordpress.  </p>
                 <p><img class="imgl" src="images/icons-link.png" alt="" style="border: none; height:25px;"> <a href="https://metaliusa.com"><b>Metali LLC</b></a></p>
             </div>
             <br><br><br>
-            <div class="block_image4">
+            <div class="block_image3">
                 <img class="imgl" src="images/little_paws.png" alt="" style="width:auto;height:450px;">
                 <h4>Little Paws</h4>
                 <p>Little Paws provides pet care after school in the South Bay of LA. Run by a group of students, the earnings go to the Leukemia and Lymphoma Society. To better communicate with our clients, I used Figma to design a website.<br>
@@ -56,11 +56,12 @@ $(function () {
                 <p><a href="Little-Paws-Website-Prototype-Demo.html"><b>Prototype Video Demo</b></a></p>
             </div>
             <br><br><br>
-            <div class="block_image3">
+            <div class="block_image4">
                 <img class="imgl" src="images/ricething.png" alt="" style="width:auto;height:450px;">
                 <h4>South Bay Rice Things</h4>
-                <p>This mobile app is an UI design for a Japanese restaurant I worked at last summer called South Bay Rice Things. The restaurant mainly uses delivery services such as Grubhub and DoorDash for customers. However, I noticed that the restaurant lacked efficiency in their system of using tablets to alert the employees of online orders. Thus, I became inspired to create an app to help them.
-                I used Figma to create the UI design and Photoshop to edit food images. 
+                <p>This mobile app is an UI design for a Japanese restaurant I worked at last summer called South Bay Rice Things. The restaurant mainly uses delivery services such as Grubhub and DoorDash for customers. However, I noticed that the restaurant lacked efficiency in their system of using tablets to alert the employees of online orders. Thus, I became inspired to create an app to help them.<br>
+                I used Figma to create the UI design and Photoshop to edit food images. I picked out the typography and color palette. Black color is used as the primary color in contrast to the red logos. The background of buttons, active icons and part of the food images are red. The primary text color is white.<br>
+                The app allows users to create accounts and keep order history. It helps customers to save time and speed the order process. After I put it together, I created several mockups to demonstrate the final design of the app. I plan to continue to improve it in the future. 
                 </p>
                 <p><a href="South_Bay_Rice_Thing_Design_Prototype.pdf">
                   <b>Check out the desgin and prototype</b></a></p>
