--- a/drawing.html
+++ b/drawing.html
@@ -29,7 +29,7 @@ $(function () {
     <!-- content body -->
     <div id="content">
       <section>
-        <h1>Art Studio</h1>
+        <h1>Drawing</h1>
         <table >
         <tr><td border="0"><img class="imgl" src="images/This_is_Who_I_Am.JPG" alt="" style="width:350px; height:auto;"></td>
           <td border="0"><h8>This is Who I am</h8>
