--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="iso-8859-1">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="scripts/jquery-1.8.2.min.js"></script>
 <script src="scripts/jquery-defaultvalue.js"></script>
 <script src="scripts/jquery-browsercheck.js"></script>
@@ -35,9 +36,9 @@ $(function () {
         <article class="two_quarter">
           <h8></h8>
           
-          <h4>Hey there, I'm Madelyn Li! </h4>
+          <h4>Hey! <br>I'm Madelyn Li</h4>
           
-          <p>I am a senior in Mira Costa High School.  I have an avid interest in the arts and media arts, and always makes an effort to learn a lot about different media arts, especially in the interactive media design and development. </p> 
+          <p>I am senior in Mira Costa High School.  I have an avid interest in the arts and media arts, and always makes an effort to learn a lot about different media arts, especially in the interactive media design and development. </p> 
           <p>I'm passionate about designing efficient, effortless, and empowering experiences.</p>
         </article>
         </article><br />     
