--- a/drawing.html
+++ b/drawing.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 
 <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="scripts/jquery-1.8.2.min.js"></script>
 <script src="scripts/jquery-defaultvalue.js"></script>
 <script src="scripts/jquery-browsercheck.js"></script>
