--- a/drawing.html
+++ b/drawing.html
@@ -31,7 +31,10 @@ $(function () {
     <div id="content">
       <section>
         <h1>Drawing</h1>
+
+
         <table >
+        <!--<tr><td border="0" colspan="2"> <i>Zoom Image on hover</i></td></tr>-->
         <tr><td border="0"><img class="imgl" src="images/This_is_Who_I_Am.JPG" alt="" style="width:350px; height:auto;"></td>
           <td border="0"><h8>This is Who I am</h8>
                 <p><b>Year</b>: 2024<br>
