--- a/drawing.html
+++ b/drawing.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
 <head>
 <title>Madelyn Li's Website</title>
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <meta charset="iso-8859-1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 
 <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
