--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -42,8 +42,8 @@ $(function () {
                     <p><b>Year</b>:  2024<br>
                        <b>Medium</b>: Adobe Photoshop, Canva<br>
                        <b>Dimension</b>: 1526 x 2154 (Pixel)</p>
-                       <p class="one_third first">I was inspired to recreate a non profit organization's logo so I could explore more in depth about typography, elements of graphic design and such. Most importantly, I aimed to have fun while recreating the organization's logo. 
-The Leukemia Lymphoma Society is a global organization that funds cancer research, patients, and hospitals to see a cure in cancer or a complete stop in cancer. They want a logo that shows their diverseness in everyone who helped out with donations, their cancer patients and team, and a logo that welcomes anyone with cancer other than leukemia and lymphoma. <br><br>
+                       <p class="two_quarter2 first">I was inspired to redesign the logo for the Leukemia & Lymphoma Society (LLS), a nonprofit organization dedicated to the fight against cancer. This project allowed me to dive deeper into typography, graphic design elements, and overall design principles. Above all, I focused on enjoying the process of recreating the organization's logo. <br><br>
+In this project, I honed my editing skills in Canva and Photoshop while designing mockups for a shirt and hoodie. I incorporated different versions of the logo, selected a color palette, and chose a font to complement the logo design. The new logo honors and recognizes the donors who make these efforts possible, along with the patients, caregivers, and teams who are fighting cancer. My focus was on crafting a design that remains welcoming and inclusive. I hope to help advocate for a brighter future for both survivors and patients.</p>
 <a class="btn" href="https://www.canva.com/design/DAGHyH5gEYI/1FMNUTxD7Msa8gGXH8UiLw/view?utm_content=DAGHyH5gEYI&utm_campaign=designshare&utm_medium=link&utm_source=editor"><b>Full View &raquo; </b></a>
 </p>
                     
@@ -54,7 +54,7 @@ The Leukemia Lymphoma Society is a global organization that funds cancer researc
                     <p><b>Year</b>:  2024<br>
                        <b>Medium</b>: Adobe Photoshop<br>
                        <b>Dimension</b>: 1360 x 1030 (Pixel)</p>
-                       <p>Moon Blake lives in the forests of Alabama, away from civilization. The innocent soul steps outside the forest after his parents pass away. Moon gets tangled up with an arrogant constable and his life becomes a full adventure. <br>
+                       <p>Moon Blake lives in the forests of Alabama, away from civilization. The innocent soul steps outside the forest after his parents pass away. Moon gets tangled up with an arrogant constable and his life becomes a full adventure. <br><br>
 I noticed that its old book cover did not convey the feeling of the story well. In this redesign, I signified Moon’s innocence with a pure white background. For the book name, I emphasized the typography and the coloring of the letters; I tried to capture the adventurous theme through the mist surrounding the letters. To create the tension, several letters are imbalanced in different sizes. I created the font in Illustrator by reshaping the letters, resizing the shape, and picking out the color. In Photoshop I designed the mist and reduced the opacity of the brush and pulled down the ink for a scratched look in letters. I hope this design captures the adventurous feeling of the novel.
  </p>
  <p><a class="btn" href="book-cover-redesign.pdf"><b>Full View &raquo; </b></a></p>
