--- a/website_and_mobile_app.html
+++ b/website_and_mobile_app.html
@@ -34,22 +34,21 @@ $(function () {
             <div class="block_image1">
                 <img class="imgl" src="images/scoreusa.png" alt="" style="width:auto;height:215px;">
                 <p><h4>Safe Covid-19 Relief Engineering</h4></p>
-                <p>Safe Covid-19 Relief Engineering (SCORE) is a non-profit organization that led by high school students. During pandimic period, I co-founded and led South Bay studernt to help fight Covid-19 througn learning, design, and 3D printing of innovative medical supplies for donation to those un urgent needs against Covid-19. After Covid-19, SCORE keep introducing Biomedical Research progrm. I used Duda framework to design and develop the website. </p>
+                <p>Safe Covid-19 Relief Engineering (SCORE) is a non-profit organization led by high school students. During the pandemic, I co-founded and led students across the nation to help fight Covid-19 through learning, design, and 3D printing of innovative medical supplies for donation to those in urgent need for protective equipment (such as nurses and doctors). I used Duda framework to design and develop the website. </p>
                 <p><img class="imgl" src="images/icons-link.png" alt="" style="border: none; height:25px;"> <a href="http://www.scoreusa.org"><b>Safe Covid-19 Relief Engineering</b></a></p>
             </div>
             <br><br><br>
             <div class="block_image2">
                 <img class="imgl" src="images/metaliusa.png" alt="" style="width:auto;height:380px;">
                 <h4>METALI LLC</h4>
-                <p>Metali LLC is pioneer in Nanotech Metallurgy Technolgy. The company locates in Los Angeles and is leading a new metals revoulution in the 21st century. 
-                This past summer, I worked with the company organizier to re-designed the layouts, typography, payment form and created market materials. The website was created and developed with Wordpress.  </p>
+                <p>Metali LLC is pioneer in Nanotech Metallurgy Technology. The company is located in Los Angeles and is leader in the new strong metals revolution in the 21st century. This past summer, I worked with the company leaders to re-design the layouts, typography, and payment forms, as well as creating marketing materials for the company. The website was created and developed with Wordpress.  </p>
                 <p><img class="imgl" src="images/icons-link.png" alt="" style="border: none; height:25px;"> <a href="https://metaliusa.com"><b>Metali LLC</b></a></p>
             </div>
             <br><br><br>
             <div class="block_image3">
                 <img class="imgl" src="images/little_paws.png" alt="" style="width:auto;height:450px;">
                 <h4>Little Paws</h4>
-                <p>Little Paws provides pet care after school in the South Bay of LA. Run by a group of students, the earnings go to the Leukemia and Lymphoma Society. To better communicate with our clients, I used Figma to design a website.<br>
+                <p>Little Paws provides after school pet care in the South Bay Los Angeles area. Run by a group of students, the earnings of the organization are donated to the Leukemia and Lymphoma Society. To create a cohesive website that encourages smooth communicate with our clients, I used Figma to design the website.<br>
                 From research, ideation, and to UI design and implementation, I designed the Little Paws webpage to display pet care staff, services, rates, operation time and contact information. I also created an input form to collect schedule book info from users. I chose a card-style and grid-based layout to help users access the contents easily. The typography hierarchy highlights the important information. I chose the primary color to be a light grayish orange color. This warm, low-contrast color gently welcomes viewers into the website. I designed a little paw image in an ellipse and heart shape on Figma, then inserted it into text for a simple logo. I designed it holistically by creating branding, logos and a color scheme to attract new clients.
                 </p>
                 <p><a href="Little-paws-design-and-prototype.pdf">
@@ -60,9 +59,9 @@ $(function () {
             <div class="block_image4">
                 <img class="imgl" src="images/ricething.png" alt="" style="width:auto;height:450px;">
                 <h4>South Bay Rice Things</h4>
-                <p>This mobile app is an UI design for a Japanese restaurant I worked at last summer called South Bay Rice Things. The restaurant mainly uses delivery services such as Grubhub and DoorDash for customers. However, I noticed that the restaurant lacked efficiency in their system of using tablets to alert the employees of online orders. Thus, I became inspired to create an app to help them.<br>
+                <p>This is a UI design for a Japanese restaurant's mobile app. I worked at South Bay Rice Things last summer and the restaurant mainly uses delivery services such as Grubhub and DoorDash for customers. However, I noticed that the restaurant lacked efficiency in their system of using tablets to alert the employees of online orders. Thus, I became inspired to create an app to help them with this issue.<br>
                 I used Figma to create the UI design and Photoshop to edit food images. I picked out the typography and color palette. Black color is used as the primary color in contrast to the red logos. The background of buttons, active icons and part of the food images are red. The primary text color is white.<br>
-                The app allows users to create accounts and keep order history. It helps customers to save time and speed the order process. After I put it together, I created several mockups to demonstrate the final design of the app. I plan to continue to improve it in the future. 
+                The app allows users to create accounts and keep order history. It helps customers to save time and speed the order process. After I put it together, I created several mockups to demonstrate the final design of the app. I plan to continue to improve this design in the future. 
                 </p>
                 <p><a href="South_Bay_Rice_Thing_Design_Prototype.pdf">
                   <b>Check out the desgin and prototype</b></a></p>
