--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -90,7 +90,8 @@ I noticed that its old book cover did not convey the feeling of the story well. 
                   <article class="two_quarter"><a href="#"><img class="btmspace-30" src="images/comic_strip_project.png" alt="" style="width:330px; height:auto;"></a>
                     <h4 class="nospace heading font-x1">Comic Strip Project</h4>
                     <p><b>Year</b>:  2024<br>
-                       <b>Medium</b>: Canva<br>                      
+                       <b>Medium</b>: Storyboardthat<br>  </p>    
+                       <p><a class="btn" href="comic_strip_project.pdf"><b>Full View &raquo; </b></a></p>                
                     <footer class="nospace"><a class="btn" href="#"> <br><br></a></footer>
                   </article>
             </div>
