--- a/2D_design_art.html
+++ b/2D_design_art.html
@@ -22,7 +22,6 @@
 $(function () {
     $("#nav-placeholder").load("includes/menu.html");
     $("#footer-placeholder").load("includes/footer.html");
-    $("#sidebar-placeholder").load("includes/sidebar.html");
 });
 </script>
 <div id="nav-placeholder"> </div>
@@ -30,7 +29,7 @@ $(function () {
 <div class="wrapper row3">
   <div id="container" class="clear">
     <!-- content body -->
-      <div id="content">
+      <div id="about_content">
           <section class="hoc container clear"> 
             <!-- ################################################################################################ -->
             <div class="sectiontitle">
@@ -41,15 +40,13 @@ $(function () {
                     <h3 class="nospace heading font-x1">Growing with Elegance</h3>        
                     <p><b>Year</b>:  2023<br>
                        <b>Medium</b>: Adobe Photoshop<br>
-                       <b>Dimension</b>: 1496 x 1080 (Pixel)</p>
-                    <footer class="nospace"><a class="btn" href="#"> <br><br></a></footer>
+                       <b>Dimension</b>: 1496 x 1080 (Pixel)</p>                   
                   </article>
                   <article class="two_quarter"><a href="#"><img class="btmspace-30" src="images/A_Window_to_Nature.jpg" alt="" style="width:450px; height:auto;"></a>
                     <h3 class="nospace heading font-x1">A Window of Nature</h3>
                     <p><b>Year</b>:  2024<br>
                        <b>Medium</b>: Adobe Photoshop<br>
-                       <b>Dimension</b>: 1360 x 1030 (Pixel)</p>
-                    <footer class="nospace"><a class="btn" href="#"> <br><br></a></footer>
+                       <b>Dimension</b>: 1360 x 1030 (Pixel)</p>                    
                   </article>
             </div>
             <div class="group">
@@ -57,15 +54,13 @@ $(function () {
                     <h3 class="nospace heading font-x1">Bento Box</h3>
                     <p><b>Year</b>:  2024<br>
                        <b>Medium</b>: Adobe Photoshop<br>
-                       <b>Dimension</b>: 1308 x 742 (Pixel)</p>
-                    <footer class="nospace"><a class="btn" href="#"> <br></a></footer>
+                       <b>Dimension</b>: 1308 x 742 (Pixel)</p>                  
                   </article>
                   <article class="two_quarter"><a href="#"><img class="btmspace-30" src="images/Yunnan_Mushroom_Hot_Pot.jpg" alt="" style="width:450px; height:auto;"></a>
                     <h3 class="nospace heading font-x1">Yunnan Mushroom Hot Pot</h3>
                     <p><b>Year</b>:  2024<br>
                        <b>Medium</b>: Adobe Photoshop<br>
                        <b>Dimension</b>: 1100 x 623 (Pixel)</p>
-                    <footer class="nospace"><a class="btn" href="#"> <br></a></footer>
                   </article>
             </div>
             </section>
@@ -76,14 +71,12 @@ $(function () {
                 <p><b>Year</b>:  2024<br>
                    <b>Medium</b>: Adobe Photoshop<br>
                    <b>Dimension</b>: 800 x 648 (Pixel)</p>
-                <footer class="nospace"><a class="btn" href="#"> <br><br></a></footer>
               </article>
               <article class="two_quarter"><a href="#"><img class="btmspace-30" src="images/Jiangxi_Breaded_Pork.png" alt="" style="width:450px; height:auto;"></a>
                 <h3 class="nospace heading font-x1">Jiangxi Breaded Pork</h3>
                 <p><b>Year</b>:  2024<br>
                    <b>Medium</b>: Adobe Photoshop<br>
                    <b>Dimension</b>: 800 x 648 (Pixel)</p>
-                <footer class="nospace"><a class="btn" href="#"> <br><br></a></footer>
               </article>
             </div>   
             <div class="group">
@@ -92,7 +85,6 @@ $(function () {
                 <p><b>Year</b>:  2024<br>
                    <b>Medium</b>: Adobe Photoshop<br>
                    <b>Dimension</b>: 1252 x 708 (Pixel)</p>
-                <footer class="nospace"><a class="btn" href="#"> <br></a></footer>
               </article>               
               </div>
 
