--- a/drawing.html
+++ b/drawing.html
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <meta charset="iso-8859-1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link rel="stylesheet" href="styles/layout.css" type="text/css">
+<link rel="stylesheet" href="styles/layout2.css" type="text/css">
 
 <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +22,6 @@
 $(function () {
     $("#nav-placeholder").load("includes/menu.html");
     $("#footer-placeholder").load("includes/footer.html");
-    $("#sidebar-placeholder").load("includes/sidebar.html");
 });
 </script>
 <div id="nav-placeholder"> </div>
@@ -45,8 +44,8 @@ $(function () {
 
                 <p><b>Description</b>:<br>
                    Life is like a kaleidoscope. It changes in color and shape. This piece is designed to serve as an artistic rendering of my identity. As an Asian American, finding ways to bring me closer to my community and expanding upon my roots is an essential part to my self development. I reflected on what has held a significant meaning to me during life. <br>
-I used various colors and shapes to represent the rich experiences in my life. I embedded an image of LA (on the left) from an old magazine. I cut out irregular holes in a thicker piece of blue cardboard to symbolize my connected communities. I then glued a cardboard network to my chest, symbolizing how I put community first. The gemstones I glued down symbolize activities I have done with art and technology. It serves as a colorful reflection to my life experiences. I hope to show who I am to everyone who stumbles upon this piece.
-</p>
+                    I used various colors and shapes to represent the rich experiences in my life. I embedded an image of LA (on the left) from an old magazine. I cut out irregular holes in a thicker piece of blue cardboard to symbolize my connected communities. I then glued a cardboard network to my chest, symbolizing how I put community first. The gemstones I glued down symbolize activities I have done with art and technology. It serves as a colorful reflection to my life experiences. I hope to show who I am to everyone who stumbles upon this piece.
+                </p>
           </td>
         </tr>
         <tr><td><img class="imgl" src="images/Life_The_Documentary.JPG" alt="" style="width:350px; height:auto;"></td>
