--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no" />
 <title>Madelyn Li's Web Site</title>
 <meta charset="iso-8859-1">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
@@ -51,12 +53,11 @@ $(function () {
         <article>
           <figure class="clear">
             <ul id="rotate">
-                  <li><img src="images/little_paws_slide.png" border="0" alt="" style="width:auto;height:600px; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></li>
-                  <li><img src="images/metaliusa.png" border="0" alt="" style="width:auto;height:600px; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></li>
-                  <li><img src="images/scoreusa_slide.png" border="0" alt="" style="width:auto;height:600px; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></li>
-                  <li><img src="images/ricething_slide.png" border="0" alt="" style="width:auto;height:600px; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></li>
-                  <li><img src="images/llc.png" border="0" alt="" style="width:auto;height:600px; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></li>
-                  <li><img src="images/bookcover.png" border="0" alt="" style="width:auto;height:600px; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></li>
+                  <li><a href="Little-paws-design-and-prototype.pdf"><img class="img-fluid img-thumbnail" src="images/little_paws_slide.png" border="0" alt="" style="width: auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a></li>
+                  <li><a href="images/score-design-process.png"><img class="img-fluid img-thumbnail" src="images/scoreusa_slide.png" border="0" alt="" style="width: auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a> </li>
+                  <li><a href="South_Bay_Rice_Thing_Design_Prototype.pdf"><img class="img-fluid img-thumbnail" src="images/ricething_slide.png" border="0" alt="" style="width: auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a></li>
+                  <li><a href="https://www.canva.com/design/DAGHyH5gEYI/1FMNUTxD7Msa8gGXH8UiLw/view?utm_content=DAGHyH5gEYI&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/llc.png" border="0" alt="" style="width: auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a></li>
+                  <li><a href="book-cover-redesign.pdf"><img class="img-fluid img-thumbnail" src="images/bookcover.png" border="0" alt="" style="max-width:auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a></li>
             </ul>
             <figcaption>
                   <div style="margin-top: 530px;">
