--- a/website_and_mobile_app.html
+++ b/website_and_mobile_app.html
@@ -34,14 +34,15 @@ $(function () {
                 <img class="imgl" src="images/scoreusa.png" alt="" style="width:auto;height:215px;">
                 <p><h4>Safe Covid-19 Relief Engineering</h4></p>
                 <p>Safe Covid-19 Relief Engineering (SCORE) is a non-profit organization led by high school students. During the pandemic, I co-founded and led students across the nation to help fight Covid-19 through learning, design, and 3D printing of innovative medical supplies for donation to those in urgent need for protective equipment (such as nurses and doctors). I used Duda framework to design and develop the website. </p>
-                <p><img class="imgl" src="images/icons-link.png" alt="" style="border: none; height:25px;"> <a href="http://www.scoreusa.org"><b>Safe Covid-19 Relief Engineering</b></a></p>
+                <p><a href="images/score-design-process.png">Check out the design and process</a><p>
+                <p><img class="imgl" src="images/icons-link.png" alt="" style="border: none; height:25px;"> <a href="http://www.scoreusa.org"><b>scoreusa.org</b></a></p>
             </div>
             <br><br><br>
             <div class="block_image2">
                 <img class="imgl" src="images/metaliusa.png" alt="" style="width:auto;height:380px;">
                 <h4>METALI LLC</h4>
                 <p>Metali LLC is pioneer in Nanotech Metallurgy Technology. The company is located in Los Angeles and is leader in the new strong metals revolution in the 21st century. This past summer, I worked with the company leaders to re-design the layouts, typography, and payment forms, as well as creating marketing materials for the company. The website was created and developed with Wordpress.  </p>
-                <p><img class="imgl" src="images/icons-link.png" alt="" style="border: none; height:25px;"> <a href="https://metaliusa.com"><b>Metali LLC</b></a></p>
+                <p><img class="imgl" src="images/icons-link.png" alt="" style="border: none; height:25px;"> <a href="https://metaliusa.com"><b>metaliusa.com</b></a></p>
             </div>
             <br><br><br>
             <div class="block_image3">
