--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no" />
 <title>Madelyn Li's Web Site</title>
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <meta charset="iso-8859-1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
 <script src="scripts/jquery-1.8.2.min.js"></script>
