--- a/index.html
+++ b/index.html
@@ -1,76 +1,123 @@
+<!-- https://www.browserstack.com/guide/build-a-website-using-html-css -->
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Madelyn Li's Web Site</title>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-<meta charset="iso-8859-1">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link rel="stylesheet" href="styles/layout.css" type="text/css">
+<link rel="stylesheet" href="style/styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
-<script src="scripts/jquery-1.8.2.min.js"></script>
-<script src="scripts/jquery-defaultvalue.js"></script>
-<script src="scripts/jquery-browsercheck.js"></script>
-<!--[if lt IE 9]>
-<link rel="stylesheet" href="styles/ie.css" type="text/css">
-<script src="scripts/ie/html5shiv.min.js"></script>
-<![endif]-->
-<!-- homepage scripts -->
 <script src="scripts/jquery-innerfade.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-<script>
-$(function () {
-    $('#rotate').innerfade({
-        animationtype: 'fade',
-        speed: 600,
-        timeout: 3000,
-        type: 'sequence',
-        containerheight: 'auto'
-    });
-    $("#nav-placeholder").load("includes/menu.html");
-    $("#footer-placeholder").load("includes/footer.html");
-});
-</script>
-<!-- / homepage scripts -->
-<!-- layout.css: Changed line 18 font size from 13px to 14px. Changed font color from 747474 to 000000 on line 51 for row3. Changed line 61 h7 font color. -->
-<!-- homepage.css: Changed line line 19 to padding-top:1px; from 5px -->
-
+<style>
+:target {
+    background-color: yellow;
+}
+</style>
 </head>
 <body>
+
 <div id="nav-placeholder"> </div>
-<!-- content -->
-<div class="wrapper row3">
-  <div id="container" class="clear">
-    <!-- content body -->
-    <div id="homepage">
-      <!-- Shout -->
-      <section id="shout">
-        <p>Welcom to Madelyn's Website</p>
-      </section>
-      <!-- / Shout -->
-      <!-- Latest -->
-      <section id="latest">
-        <article>
-          <figure class="clear">
-            <ul id="rotate">
-                  <li><a href="Little-paws-design-and-prototype.pdf"><img class="img-fluid img-thumbnail" src="images/little_paws_slide.png" border="0" alt="" style="width: auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a></li>
-                  <li><a href="images/scoreusa-design-and-process.png"><img class="img-fluid img-thumbnail" src="images/scoreusa_slide.png" border="0" alt="" style="width: auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a> </li>
-                  <li><a href="South_Bay_Rice_Thing_Design_Prototype.pdf"><img class="img-fluid img-thumbnail" src="images/ricething_slide.png" border="0" alt="" style="width: auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a></li>
-                  <li><a href="https://www.canva.com/design/DAGHyH5gEYI/1FMNUTxD7Msa8gGXH8UiLw/view?utm_content=DAGHyH5gEYI&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/llc.png" border="0" alt="" style="width: auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a></li>
-                  <li><a href="book-cover-redesign.pdf"><img class="img-fluid img-thumbnail" src="images/bookcover.png" border="0" alt="" style="max-width:auto; height:auto; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); "></a></li>
-            </ul>
-            <figcaption>
-                  <div style="margin-top: 530px;">
-                  </div>
-                  
-            </figcaption>
-            
-          </figure>
-        </article>
-      </section>     
-  </div>
+<div class="wrapper row1">
+    <header >
+              <img class="header" src="images/logo.png" style="width: auto; height: 100%" alt="Logo">
+    </header>
 </div>
-  <!-- Footer -->
-  </div>
+<div class="wrapper row2">
+	<div class="topnav " id="myTopnav">
+		  <a class="active" href="index.html"><b>Home</b></a>
+	      <a  href="about.html"><b>About Me</b></a>
+	      <a href="website_and_mobile_app.html"><b>Website and Mobile App Projects</b></a>
+		  <div class="dropdown">
+		  	      <button class="dropbtn"><b>Studio Art</b>
+	          <i class="fa fa-caret-down"></i>
+	        </button>
+	              <div class="dropdown-content">
+	                <a href="drawing.html">Drawing</a>
+	                <a href="2D_design_art.html">2D Design Art</a>
+	                <a href="3D_design_art.html">3D Design Art</a>
+	              </div>
+	       </div>
+		  <a href="graphicdesign.html"><b>Graphic Design</b></a>
+		  <a href="photography.html"><b>Photography</b></a>
+		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+		    <i class="fa fa-bars"></i>
+		  </a>
+	</div>
 </div>
-<div id="footer-placeholder"> </div> 
+
+<main>
+<section id="slidershow">
+	<div class="container">
+		<h1>Welcom to Madelyn's Website</h1><br>
+		
+
+		<div class="slideshow-container">
+
+			<div class="mySlides fade"><a href="Little-paws-design-and-prototype.pdf">
+			  <img src="images/little_paws_slide.png" style="width: 80%; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); ">			</a> 
+			</div>
+			<div class="mySlides fade">	<a href="images/scoreusa-design-and-process.png">		  
+			  <img src="images/scoreusa_slide.png" style="width: 80%; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); ">	</a>		  
+			</div>
+			<div class="mySlides fade">	<a href="South_Bay_Rice_Thing_Design_Prototype.pdf">		  
+			  <img src="images/ricething_slide.png" style="width: 80%; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); ">	</a>	  
+			</div>
+			<div class="mySlides fade">		<a href="https://www.canva.com/design/DAGHyH5gEYI/1FMNUTxD7Msa8gGXH8UiLw/view?utm_content=DAGHyH5gEYI&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail">	  
+			  <img src="images/llc.png" style="width: 80%; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); ">			</a>  
+			</div>
+			<div class="mySlides fade">	<a href="book-cover-redesign.pdf">		  
+			  <img src="images/bookcover.png" style="width: 80%; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); ">	</a>		  
+			</div>
+        </div>
+        <div style="margin-left: 35%; margin-top: 15px;">
+		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		  <span class="dot"></span>
+		</div>
+	</div>
+	</div>
+</main>
+<div class="wrapper row4">
+<footer>
+<p class="fl_center">Madelyn Li &nbsp; <i>limadelyn94@gmail.com</i> &nbsp; 2025 &nbsp; &nbsp;</p>
+</footer>
+</div>
+<script>
+
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+
+
+let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script> 
+</body>
+</html>
