--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -50,7 +50,7 @@
                           
                   <article >
                     <div class="graphic_image1">
-                    <a href="#"><img class="btmspace-30" src="images/branding_design.png" alt="" style="width:100%; height:auto;"></a>
+                    <a href="images/branding_design.png"><img class="btmspace-30" src="images/branding_design.png" alt="" style="width:100%; height:auto;"></a>
                         <p><b>Branding Design for LLS Organization</b><br>        
                         <p><b>Year</b>:  2024<br>
                        <b>Medium</b>: Adobe Photoshop, Canva<br>
@@ -63,7 +63,7 @@
                   </article>
                   <article >
                     <div class="graphic_image1">
-                        <a href="#"><img class="btmspace-30" src="images/book_over_redesign.jpg" alt="" style="width:100%; height:auto;"></a>
+                        <a href="book_over_redesign.jpg"><img class="btmspace-30" src="images/book_over_redesign.jpg" alt="" style="width:100%; height:auto;"></a>
                         <p><b>Book Cover Redesign for Alabama Moon by Watt Key</b></p>
                         <p><b>Year</b>:  2024<br>
                        <b>Medium</b>: Adobe Photoshop<br>
@@ -79,7 +79,7 @@
                     <div class="design_container">
                         <article style="margin-top: 15px; margin-right: 15px;">
                             <div class="graphic_image1">
-                            <a href="#"><img class="btmspace-30" src="images/self-love_poster.png" alt="" style="width:100%; height:auto;"></a>
+                            <a href="images/self-love_poster.png"><img class="btmspace-30" src="images/self-love_poster.png" alt="" style="width:100%; height:auto;"></a>
                             <p class="ex1"><b>Self-love Poster</b></p>
                             <p><b>Year</b>:  2024<br>
                                <b>Medium</b>: Canva<br>
@@ -88,7 +88,7 @@
                         </article>
                       <article style="margin-top: 25px;">
                         <div class="graphic_image1">
-                        <a href="#"><img class="btmspace-30" src="images/social_issue_poster.png" alt="" style="width:100%; height:auto;"></a>
+                        <a href="images/social_issue_poster.png"><img class="btmspace-30" src="images/social_issue_poster.png" alt="" style="width:100%; height:auto;"></a>
                         <p><b>Social Issue Poster</b></p>     
                         <p><b>Year</b>:  2024<br>
                            <b>Medium</b>: Canva<br>
@@ -99,7 +99,7 @@
                     <div class="design_container">
                           <article style="margin-top: 25px;">
                             <div class="graphic_image1">
-                                <a href="#"><img class="btmspace-30" src="images/space_observation_deck.png" alt="" style="width:100%; height:auto;"></a>
+                                <a href="images/space_observation_deck.png"><img class="btmspace-30" src="images/space_observation_deck.png" alt="" style="width:100%; height:auto;"></a>
                                 <p><b>Space Observation Deck</b></p>
                                 <p><b>Year</b>:  2024<br>
                                    <b>Medium</b>: Canva<br>
@@ -108,11 +108,11 @@
                             </article>
                           <article style="margin-top: 25px;">
                             <div class="graphic_image1">
-                                <a href="#"><img class="btmspace-30" src="images/comic_strip_project.png" alt="" style="width:100%; height:auto;"></a>
-                            <p><b>Comic Strip Project</b></p>
+                                <a href="the_garden_story.png"><img class="btmspace-30" src="images/the_garden_story.png" alt="" style="width:100%; height:auto;"></a>
+                            <p><b>The Garden Story</b></p>
                             <p><b>Year</b>:  2024<br>
                                <b>Medium</b>: Storyboardthat<br>  </p>    
-                               <p><a class="btn" href="comic_strip_project.pdf"><b>Full View &raquo; </b></a></p>  
+                               <p><a class="btn" href="The_Garden_Story.pdf"><b>Full View &raquo; </b></a></p>  
                             </div>              
                             </article>
                     </div>        
