--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 			<div class="mySlides fade">		<a href="https://www.canva.com/design/DAGHyH5gEYI/1FMNUTxD7Msa8gGXH8UiLw/view?utm_content=DAGHyH5gEYI&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail">	  
 			  <img src="images/llc.png" style="width: 80%; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); ">			</a>  
 			</div>
-			<div class="mySlides fade">	<a href="book-cover-redesign.pdf">		  
-			  <img src="images/bookcover.png" style="width: 80%; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); ">	</a>		  
+			<div class="mySlides fade">	<a href="The_Garden_Story.pdf">		  
+			  <img src="images/garden_story.png" style="width: 80%; filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); ">	</a>		  
 			</div>
         </div>
         <div style="margin-left: 35%; margin-top: 15px;">
@@ -116,7 +116,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
+  setTimeout(showSlides, 3000); // Change image every 2 seconds
 }
 </script> 
 </body>
