--- a/photography.html
+++ b/photography.html
@@ -44,7 +44,7 @@
         <div class="photo-main">      
             <div class="secondhalf">  
             <br>            
-             <h1>Website and Mobile App Projects</h1><br>
+             <h1>Photography</h1><br>
              <div id="graphicdesign">
                    <table style="border-spacing: 20px;">
                         <tr><td border="0">
