--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -44,7 +44,7 @@
         <div class="box-main">      
             <div class="secondhalf">  
             <br>            
-             <h1>Graphicdesign</h1><br>
+             <h1>Graphic Design</h1><br>
                 <div id="graphicdesign">
                    <div class="design_container">
                           
